# tantivy-go-ffi

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod
.github/workflows/: build-libs.yml
example/: go.mod  main.go
go/tantivy/: client.go
libs/: tantivy_go.h
src/: ffi.rs  lib.rs
